Update index page

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Website Deployment With Github Actions and Terraform</h1>
+    <p>This site is deployed on AWS S3</p>
 </body>
 </html>
